--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -44,3 +44,26 @@
     filter: invert(1);
   }
 }
+
+.loading_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #09f;
+  animation: spin 1s linear infinite;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
