--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,26 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
+.repo-link {
+  display: inline-flex;
+  align-items: center;
+  color: #333;
+  gap: 0.4rem;
   text-decoration: none;
+  border-radius: 0.3rem;
+  background-color: #f3f4f6;
+  padding: 0.25rem 0.5rem;
+  font-weight: 500;
+  font-size: 0.875rem;
 }
 
-* {
-  box-sizing: border-box;
+.repo-link svg {
+  flex: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.repo-link:hover {
+  background-color: #e5e7eb;
+  outline: none;
+  box-shadow: 0 0 0 1px rgb(37 99 235);
 }
